@@ -42,6 +42,7 @@ Improvements::
 * allow relative font size for sub and sup to be set independently; support combined setting for backwards compatibility
 * allow value of `base-font-size-min` and `<category>-font-size-min` theme keys to be relative (e.g., 0.75em) (#2547)
 * upgrade prawn-svg to 0.36 to fix dependencies, improve gradient support, and support additional properties; disable experimental warnings when requiring prawn-svg on Ruby 2.7 (#2551)
+* remove shy hyphens from text in log message when formatted text cannot be parsed (#2599)
 
 Bug Fixes::
 
